added 'wear' column to the skins table
